Add updated files (stop doing these big commits...)

--- a/AppInstaller/app/src/main/res/values/strings.xml
+++ b/AppInstaller/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">App Installer</string>
     <string name="title_store">Demo Store</string>
     <string name="title_library">My Apps</string>
-    <string name="title_app_details">My Apps</string>
+    <string name="title_app_details">My App Details</string>
 
     <string name="large_text">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam iaculis ultricies sapien, ultrices feugiat libero malesuada non.
