Extract hard coded string to strings.xml
Format navigation and layout code

--- a/AppInstaller/app/src/main/res/values/strings.xml
+++ b/AppInstaller/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="cancel_install_label">Cancel</string>
     <string name="open_app_install">Open</string>
     <string name="uninstall_label">Uninstall</string>
+    <string name="update_available_status">&#9679; Update available</string>
 
     <string name="autoupdate_settings_description">DemoStore will update (or not) automatically apps it has installed based on these settings</string>
     <string name="auto_update_title">Auto-update Settings</string>
